--- a/download_fictions.ipynb
+++ b/download_fictions.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 94,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-26T06:25:12.942686Z",
-     "start_time": "2021-08-26T06:25:12.817102Z"
+     "end_time": "2021-08-26T07:35:35.513044Z",
+     "start_time": "2021-08-26T07:35:35.388699Z"
     }
    },
    "outputs": [
@@ -14,8 +14,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "README.md                     未命名.ipynb\r\n",
-      "SPGC-metadata-2018-07-18.csv\r\n"
+      "15.txt                        32.txt\r\n",
+      "16.txt                        README.md\r\n",
+      "24.txt                        SPGC-metadata-2018-07-18.csv\r\n",
+      "27.txt                        download_fictions.ipynb\r\n"
      ]
     }
    ],
@@ -528,11 +530,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 95,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-26T07:22:56.214032Z",
-     "start_time": "2021-08-26T07:21:03.294363Z"
+     "end_time": "2021-08-26T07:43:46.300235Z",
+     "start_time": "2021-08-26T07:42:49.849406Z"
     }
    },
    "outputs": [
@@ -540,14 +542,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "4"
      ]
     }
    ],
    "source": [
     "error_log=[]\n",
-    "for k, i in enumerate(urls[:5]):\n",
-    "    flushPrint(k, i)\n",
+    "for k, i in enumerate(urls[5:10]):\n",
+    "    flushPrint(k)\n",
     "    try:\n",
     "        content = requests.get(i)\n",
     "        soup = BeautifulSoup(content.text, 'html.parser') \n",
@@ -562,6 +564,13 @@
     "        pass\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
